--- a/public/index.html
+++ b/public/index.html
@@ -87,5 +87,19 @@
     <script src="/assets/node_modules/toast-master/js/jquery.toast.js"></script>
     <!-- <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script> -->
     <script src="sweetalert2.all.min.js"></script>
+   
+  <script src=
+  "http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
+      </script> 
+       <script > 
+        function googleTranslateElementInit() { 
+            new google.translate.TranslateElement(
+                {pageLanguage:'fr',}, 
+                'google-translate'
+            ); 
+        } 
+    </script> 
+  
+    
   </body>
 </html>
